--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 	"devDependencies": {
 		"@eslint/js": "9.26.0",
 		"@playform/compress": "0.1.9",
-		"eslint": "9.26.0",
+		"eslint": "^9.32.0",
 		"eslint-plugin-astro": "1.3.1",
 		"eslint-plugin-jsx-a11y": "6.10.2",
 		"eslint-plugin-prettier": "5.3.1",
