--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"@astrojs/cloudflare": "^12.6.3",
 		"@astrojs/mdx": "^4.2.6",
 		"@astrojs/react": "^4.2.7",
 		"@astrojs/rss": "4.0.11",
